[package]
name = "rustpack"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.33"
flate2 = "1.0"
tar = "0.4"
tempfile = "3.3"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
