[package]
name = "rustpack"
version = "0.2.0"
edition = "2024"
description = "Bundle Rust applications for cross-platform execution"
authors = ["NEOAPPS"]
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
flate2 = "1.0"
tar = "0.4"
tempfile = "3.3"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
indicatif = "0.17"
rand = "0.8"
chrono = "0.4"
notify = "4.0"
zip = "0.6"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
semver = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true